--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGatosPersonales/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGatosPersonales/Nuevo.cshtml
@@ -11,13 +11,24 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "Division", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+      <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="ca_descripcion">Código*</label>
+                    @Html.TextBoxFor(q => q.IdTipoGasto, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.IdTipoGasto, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="ca_descripcion">Descripción*</label>
-                    @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "text-danger" })
+                    <label for="ca_descripcion">Nombre gasto*</label>
+                    @Html.TextBoxFor(q => q.nom_tipo_gasto, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.nom_tipo_gasto, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
