--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/_GridViewPartial_tipo_gastos_personales.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/_GridViewPartial_tipo_gastos_personales.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_tipo_gastos_personales";
-        settings.CallbackRouteValues = new { Controller = "TipoGatosPersonales", Action = "GridViewPartial_tipo_gastos_personales" };
+        settings.CallbackRouteValues = new { Controller = "TipoGastosPersonales", Action = "GridViewPartial_tipo_gastos_personales" };
 
 
         settings.KeyFieldName = "IdTipoGastos";
