--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tipos de gastos";
+    ViewBag.Title = "";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -11,5 +11,5 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_division")
+    @Html.Action("GridViewPartial_tipo_gastos_personal_anual")
 }
