--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Anular.cshtml
@@ -8,9 +8,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Anular", "Division", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Anular", "TipoGastosPersonales", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTipoGasto)
+    @Html.HiddenFor(q => q.nom_tipo_gasto)
 
 
     <div class="row">
@@ -18,7 +19,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="ca_descripcion">Código*</label>
-                    @Html.TextBoxFor(q => q.IdTipoGasto, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.IdTipoGasto, new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(m => m.IdTipoGasto, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -29,7 +30,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="ca_descripcion">Nombre gasto*</label>
-                    @Html.TextBoxFor(q => q.nom_tipo_gasto, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.nom_tipo_gasto, new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(m => m.nom_tipo_gasto, "", new { @class = "text-danger" })
                 </div>
             </div>
