--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/Modificar.cshtml
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Modificar", "Division", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "TipoGastosPersonales", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTipoGasto)
 
@@ -18,7 +18,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="ca_descripcion">Código*</label>
-                    @Html.TextBoxFor(q => q.IdTipoGasto, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.IdTipoGasto, new { @class = "form-control", @disabled="disabled" })
                     @Html.ValidationMessageFor(m => m.IdTipoGasto, "", new { @class = "text-danger" })
                 </div>
             </div>
