--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
@@ -88,7 +88,8 @@
             {
 
             });
-        }); settings.Columns.Add(column =>
+        });
+        settings.Columns.Add(column =>
         {
             column.Caption = "Catálogo";
             column.Width = Unit.Pixel(100);
