--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/_GridViewPartial_tipo_gastos_personales.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonales/_GridViewPartial_tipo_gastos_personales.cshtml
@@ -85,18 +85,32 @@
             c.Width = Unit.Pixel(150);
         });
         settings.Columns.Add("IdTipoGasto", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("nom_tipo_gasto", "Descripci").Width = Unit.Percentage(80);
+        settings.Columns.Add("nom_tipo_gasto", "Descripcion").Width = Unit.Percentage(65);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
             column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
             column.EditorProperties().CheckBox(sp =>
             {
 
             });
         });
 
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Valores por año";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(20);
+            column.SetDataItemTemplateContent(container =>
+            {
+                Html.DevExpress().HyperLink(hyperlink =>
+                {
+                    var keyValue = DataBinder.Eval(container.DataItem, "IdTipoGasto");
+                    hyperlink.Properties.Text = "Ver valores";
+                    hyperlink.NavigateUrl = Url.Action("Index", "TipoGastosPersonalesAnual", new { IdTipoCatalogo = keyValue });
+                }).Render();
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
