--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Anular.cshtml
@@ -23,7 +23,7 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCtaCble_importacion, new { @id = "IdCtaCble_importacion" })
-
+        @Html.HiddenFor(q => q.IdLiquidacion)
     @Html.HiddenFor(q => q.IdEmpresa_ct)
     @Html.HiddenFor(q => q.IdTipoCbte_ct)
     @Html.HiddenFor(q => q.IdCbteCble_ct)
