--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/Nuevo.cshtml
@@ -14,9 +14,9 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="nom_tipo_gasto">División</label>
+                    <label for="nom_tipo_gasto">Tipo de gasto</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipoGasto, settings =>
                {
                    settings.Name = "IdTipoGasto";
@@ -32,8 +32,8 @@
                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
                    settings.Properties.NullText = "== Seleccione ==";
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lista_division).GetHtml()
+                   settings.ReadOnly = true;
+               }).BindList(ViewBag.list_tipo_gasto).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdTipoGasto, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="AnioFiscal">Año fiscal*</label>
                     @Html.TextBoxFor(q => q.AnioFiscal, new { @class = "form-control" })
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="Monto_max">Valor maximo deducible*</label>
                     @Html.TextBoxFor(q => q.Monto_max, new { @class = "form-control" })
