--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/_GridViewPartial_tipo_gastos_personal_anual.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoGastosPersonalesAnual/_GridViewPartial_tipo_gastos_personal_anual.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_tipo_gastos_personales";
-        settings.CallbackRouteValues = new { Controller = "TipoGastosPersonalesAnual", Action = "GridViewPartial_tipo_gastos_personales" };
+        settings.CallbackRouteValues = new { Controller = "TipoGastosPersonalesAnual", Action = "GridViewPartial_tipo_gastos_personal_anual",  IdTipoGasto= ViewBag.IdTipoGasto  };
 
 
         settings.KeyFieldName = "IdTipoGastos";
