--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad.cshtml
@@ -81,8 +81,7 @@
             c.Width = Unit.Pixel(120);
         });
 
-        settings.Columns.Add("IdNovedad","Nov. ID").Width=Unit.Percentage(5);
-        settings.Columns.Add("IdEmpleado","Emp. ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("IdNovedad","ID").Width=Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Fecha";
@@ -91,13 +90,7 @@
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "TotalValor";
-            column.Caption = "$ Valor";
-            column.Width = Unit.Percentage(6);
-            column.PropertiesEdit.DisplayFormatString = "c2";
-        });
+       
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
         settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
         settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(8);
